# signal-forge

./: .dockerignore  .env.example  .gitignore  BACKUP_RESTORE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  PRODUCT_ARCHITECTURE_ANALYSIS.md  PRODUCT_READINESS.md  README.md  RUNBOOK.md  SECURITY.md  SLO_SLI.md  alembic.ini  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260222_0001_initial_schema.py
backend/: __init__.py  config.py  database.py  incident_manager.py  logging_config.py  main.py
backend/anomaly/: __init__.py  detector.py
backend/api/: __init__.py  anomaly.py  auth.py  brief.py  chat.py  correlation.py  dashboard.py  demo.py  forecast.py  incidents.py  notifications.py  settings.py  signals.py  simulator.py  webhooks.py  websocket.py
backend/correlation/: __init__.py  correlator.py  graph.py
backend/forecasting/: __init__.py  engine.py
backend/ingestion/: __init__.py  alpha_vantage.py  base.py  demo_data.py  manager.py  news.py  pagerduty.py  reddit.py  stripe.py  zendesk.py
backend/models/: __init__.py  incident.py  note.py  notification.py  risk.py  signal.py  tenant.py  user.py
backend/nlp/: __init__.py  embeddings.py  entities.py  pipeline.py  sentiment.py  summarizer.py
backend/observability/: __init__.py  metrics.py
backend/risk/: __init__.py  scorer.py
backend/services/: notifier.py
backend/tests/: conftest.py  test_anomaly.py  test_auth_required_remaining_routes.py  test_auth_required_routes.py  test_auth_security_and_scope.py  test_authz_route_guards.py  test_correlation.py  test_demo_simulator_tenant.py  test_endpoint_regressions.py  test_forecast.py  test_incident_manager.py  test_incidents_api.py  test_ingestion.py  test_nlp.py  test_observability_metrics.py  test_scheduler_digest.py  test_settings_auth_tenant.py  test_webhooks_security_tenant.py
backend/utils/: __init__.py  time.py
backend/workers/: __init__.py  (+1 more)
frontend/: package-lock.json  package.json
scripts/: e2e_realworld_smoke.py  start_ui.sh
(+29 files in other folders)
